--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,8 +1,18 @@
 @import "reset";
 
+* {
+  font-family: "Noto Sans KR", sans-serif !important;
+}
+
 body {
   display: flex;
   justify-content: center;
+}
+.activebtn {
+  background-color: #0095f6;
+}
+.unactivebtn {
+  background-color: #b2dffc;
 }
 
 .main-container {
@@ -26,7 +36,7 @@ body {
   @media screen and (max-width: 600px) {
     width: 100%;
   }
-  @media screen and (min-width: 600px) and (max-width: 1500px) {
+  @media screen and (max-width: 1500px) {
     width: 600px;
   }
   height: 50px;
