--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,3 @@
-@import "reset";
-
 * {
   font-family: "Noto Sans KR", sans-serif !important;
 }
@@ -8,12 +6,7 @@ body {
   display: flex;
   justify-content: center;
 }
-.activebtn {
-  background-color: #0095f6;
-}
-.unactivebtn {
-  background-color: #b2dffc;
-}
+
 
 .main-container {
   display: flex;
@@ -23,7 +16,7 @@ body {
   @media screen and (max-width: 600px) {
     width: 100%;
   }
-  @media screen and (max-width: 1500px) {
+  @media screen  (min-width: 600px) and (max-width: 1500px) {
     width: 600px;
   }
 }
