--- a/src/style/forceGraph.module.css
+++ b/src/style/forceGraph.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 300px;
-  background-color: white;
+  background-color: #f4f6fa;
 }
 
 .container svg {
@@ -10,26 +10,25 @@
   height: 100%;
 }
 
-.male {
-  fill: rgb(22, 130, 218);
-}
-
-.female {
-  fill: rgb(246, 0, 0);
-}
-
 .node text {
   font: 12px sans-serif;
 }
 
+.group1 {
+  fill: black;
+}
+
+.group2 {
+  fill: black;
+}
 div.tooltip {
   position: absolute;
   text-align: center;
   width: 110px;
   padding: 10px;
   font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0;
+  background: white;
+  border: 1px solid black;
   border-radius: 8px;
   pointer-events: none;
 }
